syntax = "proto3";

package sh.spinlock.higgins.agent.connection.protocol;

option java_package = "sh.spinlock.higgins.connection.protocol";
option java_outer_classname = "ProtocolMessages";

message AckMessage {
    uint64 id = 1;
}

message HelloMessage {
    bool needs_auth = 1;
    uint32 protocol_version = 2;
}

message AuthMessage {
    string password = 1;
    int64 uuid_least = 2;
    int64 uuid_most = 3;
}

message AgentInfoMessage {
    string json = 1;
}
